--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -39,12 +39,16 @@ global:
   appConfig:
     lfs:
       bucket: gitlab-lfs-storage
+      connection: {}
     artifacts:
       bucket: gitlab-artifacts-storage
+      connection: {}
     uploads:
       bucket: gitlab-uploads-storage
+      connection: {}
     packages:
       bucket: gitlab-packages-storage
+      connection: {}
     backups:
       bucket: gitlab-backup-storage
       tmpBucket: gitlab-tmp-storage
@@ -134,8 +138,8 @@ gitlab:
     init:
       resources:
         limits:
-          cpu: 100m
-          memory: 50Mi
+          cpu: 200m
+          memory: 200Mi
         requests:
           cpu: 50m
           memory: 6M
@@ -166,10 +170,10 @@ gitlab:
       resources:
         limits:
           cpu: 100m
-          memory: 50Mi
+          memory: 100Mi
         requests:
           cpu: 50m
-          memory: 6M
+          memory: 50M
 
   sidekiq:
     minReplicas: 2
@@ -184,11 +188,11 @@ gitlab:
     init:
       resources:
         limits:
-          cpu: 100m
-          memory: 50Mi
+          cpu: 200m
+          memory: 200Mi
         requests:
           cpu: 50m
-          memory: 6M
+          memory: 100M
 
   gitlab-shell:
     minReplicas: 2
@@ -229,7 +233,7 @@ gitlab:
     resources:
       limits:
         cpu: 150m
-        memory: 150Mi
+        memory: 1Gi
       requests:
         cpu: 75m
         memory: 100M
@@ -237,7 +241,7 @@ gitlab:
       resources:
         limits:
           cpu: 100m
-          memory: 50Mi
+          memory: 150Mi
         requests:
           cpu: 50m
           memory: 6M
