--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -1,8 +1,8 @@
 global:
   hosts:
     gitlab:
-      #hostnameOverride: public-digital.lab.myddns.me
-      hostname: public-digital.lab.myddns.me
+      hostnameOverride: public-digital.lab.myddns.me
+      name: ""
       https: true
     domain: public-digital.lab.myddns.me
     ssh: public-digital.lab.myddns.me
