--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -2,6 +2,7 @@ global:
   hosts:
     gitlab:
       hostnameOverride: public-digital.lab.myddns.me
+      name: "test"
     domain: public-digital.lab.myddns.me
     ssh: public-digital.lab.myddns.me
     https: false
