--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -1,8 +1,8 @@
 global:
   hosts:
     gitlab:
-      hostnameOverride: public-digital.lab.myddns.me
-      name: "test"
+#      hostnameOverride: public-digital.lab.myddns.me
+      name: public-digital.lab.myddns.me
     domain: public-digital.lab.myddns.me
     ssh: public-digital.lab.myddns.me
     https: false
