--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -1,7 +1,7 @@
 global:
   hosts:
     gitlab:
-#      hostnameOverride: public-digital.lab.myddns.me
+      hostnameOverride: public-digital.lab.myddns.me
       name: public-digital.lab.myddns.me
     domain: public-digital.lab.myddns.me
     ssh: public-digital.lab.myddns.me
