--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -39,21 +39,21 @@ global:
 #    enabled: false
 
   appConfig:
-    lfs:
-      bucket: gitlab-lfs-storage
-      connection: {}
-    artifacts:
-      bucket: gitlab-artifacts-storage
-      connection: {}
-    uploads:
-      bucket: gitlab-uploads-storage
-      connection: {}
-    packages:
-      bucket: gitlab-packages-storage
-      connection: {}
-    backups:
-      bucket: gitlab-backup-storage
-      tmpBucket: gitlab-tmp-storage
+#    lfs:
+#      bucket: gitlab-lfs-storage
+#      connection: {}
+#    artifacts:
+#      bucket: gitlab-artifacts-storage
+#      connection: {}
+#    uploads:
+#      bucket: gitlab-uploads-storage
+#      connection: {}
+#    packages:
+#      bucket: gitlab-packages-storage
+#      connection: {}
+#    backups:
+#      bucket: gitlab-backup-storage
+#      tmpBucket: gitlab-tmp-storage
 
 
     omniauth:
