--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -200,6 +200,8 @@ gitlab:
   sidekiq:
     minReplicas: 2
     maxReplicas: 2
+    registry:
+      enabled: false
     resources:
       limits:
         cpu: 1500m
