--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -130,6 +130,8 @@ shared-secrets:
 gitlab:
   toolbox:
     replicas: 1
+    registry:
+      enabled: false
     antiAffinityLabels:
       matchLabels:
         app: 'gitaly'
@@ -150,6 +152,8 @@ gitlab:
           memory: 6M
 
   gitaly:
+    registry:
+      enabled: false
     resources:
       requests:
         cpu: 100m
@@ -173,6 +177,8 @@ gitlab:
   webservice:
     minReplicas: 2
     maxReplicas: 2
+    registry:
+      enabled: false
     resources:
       limits:
         cpu: 1500m
@@ -221,6 +227,8 @@ gitlab:
   gitlab-shell:
     minReplicas: 2
     maxReplicas: 2
+    registry:
+      enabled: false
     resources:
       limits:
         cpu: 200m
@@ -238,6 +246,8 @@ gitlab:
           memory: 6M
 
   gitlab-exporter:
+    registry:
+      enabled: false
     resources:
       limits:
         cpu: 500m
@@ -254,6 +264,8 @@ gitlab:
           cpu: 50m
           memory: 6M
   migrations:
+    registry:
+      enabled: false
     resources:
       limits:
         cpu: 150m
