--- a/helm/charts/gitlab/charts/gitlab-pages/values.yaml
+++ b/helm/charts/gitlab/charts/gitlab-pages/values.yaml
@@ -156,6 +156,12 @@ useHttp2: true
 metrics:
   enabled: true
   port: 9235
+  path: /metrics
+  serviceMonitor:
+    enabled: false
+    additionalLabels: {}
+    endpointConfig: {}
+  # DEPRECATED
   annotations: {}
 
 workhorse: {}
