--- a/helm/charts/gitlab/charts/gitaly/Chart.yaml
+++ b/helm/charts/gitlab/charts/gitaly/Chart.yaml
@@ -1,16 +1,17 @@
+---
 apiVersion: v1
-appVersion: 14.8.2
+name: gitaly
+version: 5.9.0
+appVersion: 14.9.0
 description: Git RPC service for handling all the git calls made by GitLab
-home: https://about.gitlab.com/
-icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 keywords:
 - gitlab
 - gitaly
-maintainers:
-- email: support@gitlab.com
-  name: GitLab Inc.
-name: gitaly
+home: https://about.gitlab.com/
+icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 sources:
 - https://gitlab.com/gitlab-org/charts/gitlab/tree/master/charts/gitlab/charts/gitaly
 - https://gitlab.com/gitlab-org/build/CNG/tree/master/gitaly
-version: 5.8.2
+maintainers:
+- name: GitLab Inc.
+  email: support@gitlab.com
