--- a/helm/charts/gitlab/charts/gitlab-exporter/Chart.yaml
+++ b/helm/charts/gitlab/charts/gitlab-exporter/Chart.yaml
@@ -1,17 +1,18 @@
+---
 apiVersion: v1
-appVersion: 11.11.0
+name: gitlab-exporter
+version: 5.9.0
+appVersion: 11.12.0
 description: Exporter for GitLab Prometheus metrics (e.g. CI, pull mirrors)
-home: https://about.gitlab.com/
-icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 keywords:
 - gitlab
 - gitlab-exporter
-maintainers:
-- email: support@gitlab.com
-  name: GitLab Inc.
-name: gitlab-exporter
+home: https://about.gitlab.com/
+icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 sources:
 - https://gitlab.com/gitlab-org/charts/gitlab/tree/master/charts/gitlab/charts/gitlab-exporter
 - https://gitlab.com/gitlab-org/build/CNG/tree/master/gitlab-exporter
 - https://gitlab.com/gitlab-org/gitlab-exporter
-version: 5.8.2
+maintainers:
+- name: GitLab Inc.
+  email: support@gitlab.com
