--- a/helm/charts/gitlab/charts/kas/Chart.yaml
+++ b/helm/charts/gitlab/charts/kas/Chart.yaml
@@ -1,8 +1,9 @@
+---
 apiVersion: v1
-appVersion: 14.8.1
+name: kas
+version: 5.9.0
+appVersion: 14.9.0
 description: GitLab Agent Server
-home: https://about.gitlab.com/
-icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 keywords:
 - agent
 - gitlab
@@ -10,11 +11,11 @@ keywords:
 - k8s-agent
 - kas
 - kubernetes
-maintainers:
-- email: support@gitlab.com
-  name: GitLab Inc.
-name: kas
+home: https://about.gitlab.com/
+icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 sources:
 - https://gitlab.com/gitlab-org/charts/gitlab/tree/master/charts/gitlab/charts/gitlab-kas
 - https://gitlab.com/gitlab-org/cluster-integration/gitlab-agent
-version: 5.8.2
+maintainers:
+- name: GitLab Inc.
+  email: support@gitlab.com
