--- a/helm/charts/gitlab/charts/kas/values.yaml
+++ b/helm/charts/gitlab/charts/kas/values.yaml
@@ -26,7 +26,7 @@ init:
 hpa:
   targetAverageValue: 100m
 image:
-  repository: registry.gitlab.com/gitlab-org/cluster-integration/gitlab-agent/kas
+  repository: registry.gitlab.com/gitlab-org/build/cng/gitlab-kas
   # tag: latest
   # pullPolicy: IfNotPresent
   # pullSecrets: []
@@ -60,6 +60,10 @@ metrics:
   enabled: true
   port: 8151
   path: /metrics
+  serviceMonitor:
+    enabled: false
+    additionalLabels: {}
+    endpointConfig: {}
 serviceAccount:
   enabled: false
   create: false
