--- a/helm/charts/gitlab/charts/mailroom/Chart.yaml
+++ b/helm/charts/gitlab/charts/mailroom/Chart.yaml
@@ -1,16 +1,17 @@
+---
 apiVersion: v1
+name: mailroom
+version: 5.9.0
 appVersion: 0.0.19
 description: Handling incoming emails
-home: https://about.gitlab.com/
-icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 keywords:
 - gitlab
 - mailroom
-maintainers:
-- email: support@gitlab.com
-  name: GitLab Inc.
-name: mailroom
+home: https://about.gitlab.com/
+icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 sources:
 - https://gitlab.com/gitlab-org/charts/gitlab/tree/master/charts/gitlab/charts/mailroom
 - https://gitlab.com/gitlab-org/build/CNG/tree/master/gitlab-mailroom
-version: 5.8.2
+maintainers:
+- name: GitLab Inc.
+  email: support@gitlab.com
