--- a/helm/charts/gitlab/charts/migrations/Chart.yaml
+++ b/helm/charts/gitlab/charts/migrations/Chart.yaml
@@ -1,15 +1,16 @@
+---
 apiVersion: v1
-appVersion: 14.8.2
+name: migrations
+version: 5.9.0
+appVersion: 14.9.0
 description: Database migrations and other versioning tasks for upgrading Gitlab
-home: https://about.gitlab.com/
-icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 keywords:
 - gitlab
-maintainers:
-- email: support@gitlab.com
-  name: GitLab Inc.
-name: migrations
+home: https://about.gitlab.com/
+icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 sources:
 - https://gitlab.com/gitlab-org/charts/gitlab/tree/master/charts/gitlab/charts/migrations
 - https://gitlab.com/gitlab-org/build/CNG/tree/master/gitlab-rails
-version: 5.8.2
+maintainers:
+- name: GitLab Inc.
+  email: support@gitlab.com
