--- a/helm/charts/gitlab/charts/sidekiq/values.yaml
+++ b/helm/charts/gitlab/charts/sidekiq/values.yaml
@@ -45,11 +45,13 @@ networkpolicy:
 metrics:
   enabled: true
   port: 3807
-  annotations:
-    gitlab.com/prometheus_scrape: "true"
-    gitlab.com/prometheus_port: "3807"
-    prometheus.io/scrape: "true"
-    prometheus.io/port: "3807"
+  path: /metrics
+  podMonitor:
+    enabled: false
+    additionalLabels: {}
+    endpointConfig: {}
+  # DEPRECATED
+  annotations: {}
 
 health_checks:
   enabled: true
