--- a/helm/charts/gitlab/charts/webservice/Chart.yaml
+++ b/helm/charts/gitlab/charts/webservice/Chart.yaml
@@ -1,17 +1,18 @@
+---
 apiVersion: v1
-appVersion: 14.8.2
+name: webservice
+version: 5.9.0
+appVersion: 14.9.0
 description: HTTP server for Gitlab
-home: https://about.gitlab.com/
-icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 keywords:
 - gitlab
 - webservice
 - puma
-maintainers:
-- email: support@gitlab.com
-  name: GitLab Inc.
-name: webservice
+home: https://about.gitlab.com/
+icon: https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/logo/logo-square.svg
 sources:
 - https://gitlab.com/gitlab-org/charts/gitlab/tree/master/charts/gitlab/charts/webservice
 - https://gitlab.com/gitlab-org/build/CNG/tree/master/gitlab-webservice
-version: 5.8.2
+maintainers:
+- name: GitLab Inc.
+  email: support@gitlab.com
