--- a/helm/charts/minio/Chart.yaml
+++ b/helm/charts/minio/Chart.yaml
@@ -1,16 +1,17 @@
 apiVersion: v1
+name: minio
+version: 0.4.3
 appVersion: RELEASE.2017-12-28T01-21-00Z
 description: Object storage server built for cloud applications and devops.
-home: https://minio.io
-icon: https://www.minio.io/img/logo_160x160.png
+details: Minio used as part of GitLab deployment.
 keywords:
 - S3
 - gitlab
-maintainers:
-- email: support@gitlab.com
-  name: GitLab Inc.
-name: minio
+home: https://minio.io
+icon: https://www.minio.io/img/logo_160x160.png
 sources:
 - https://gitlab.com/gitlab-org/charts/gitlab/charts/minio
 - https://github.com/minio/minio
-version: 0.4.3
+maintainers:
+- name: GitLab Inc.
+  email: support@gitlab.com
