--- a/helm/charts/nginx-ingress/Chart.yaml
+++ b/helm/charts/nginx-ingress/Chart.yaml
@@ -7,8 +7,7 @@ annotations:
   artifacthub.io/prerelease: "false"
 apiVersion: v2
 appVersion: 1.0.4
-description: Ingress controller for Kubernetes using NGINX as a reverse proxy and
-  load balancer
+description: Ingress controller for Kubernetes using NGINX as a reverse proxy and load balancer
 home: https://github.com/kubernetes/ingress-nginx
 icon: https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Nginx_logo.svg/500px-Nginx_logo.svg.png
 keywords:
