--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -1,4 +1,10 @@
 global:
+  syncCronjob:
+    schedule: "*/5 * * * *"
+    image: jpgomezivf/python3.8_gitlab_sync:0.1
+    remoteApiUrl: 'icc-un-collective-test.rhone.un-icc.cloud/api/v4/'
+    originUrl: 'bitbucket.org'
+    remoteUrl: 'icc-un-collective-test.rhone.un-icc.cloud'
   hosts:
     domain: public-digital.lab.myddns.me
     ssh: public-digital.lab.myddns.me
