--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -1,7 +1,7 @@
 global:
   syncCronjob:
-    schedule: "*/5 * * * *"
-    image: jpgomezivf/python3.8_gitlab_sync:0.1
+    schedule: '*/5 * * * *'
+    image: 'jpgomezivf/python3.8_gitlab_sync:0.1'
     remoteApiUrl: 'icc-un-collective-test.rhone.un-icc.cloud/api/v4/'
     originUrl: 'bitbucket.org'
     remoteUrl: 'icc-un-collective-test.rhone.un-icc.cloud'
