--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -134,8 +134,6 @@ shared-secrets:
       memory: 100Mi
 
 gitlab:
-  serviceAnnotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
   toolbox:
     replicas: 1
     registry:
@@ -231,6 +229,9 @@ gitlab:
           memory: 100M
 
   gitlab-shell:
+    gitlab:
+      serviceAnnotations:
+        service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
     minReplicas: 2
     maxReplicas: 2
     resources:
