--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -229,8 +229,8 @@ gitlab:
           memory: 100M
 
   gitlab-shell:
-    gitlab:
-      serviceAnnotations:
+    service:
+      annotations:
         service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
     minReplicas: 2
     maxReplicas: 2
