--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -182,7 +182,8 @@ gitlab:
     global:
       ingress:
         annotations:
-          nginx.ingress.kubernetes.io/configuration-snippet: "test" # "sub_filter '</head>' ' <style>#login-pane {display: none !important;}#signin-container p.gl-mt-3{display: none;}</style> </head>'";
+          nginx.ingress.kubernetes.io/configuration-snippet: | 
+            sub_filter '</head>' ' <style>#login-pane {display: none !important;}#signin-container p.gl-mt-3{display: none;}</style> </head>';
     minReplicas: 2
     maxReplicas: 2
     registry:
