--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -102,7 +102,7 @@ nginx-ingress:
     metrics:
       enabled: false
   defaultBackend:
-    enabled: false
+    enabled: true
   rbac:
     create: true
   serviceAccount:
