--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -180,11 +180,11 @@ gitlab:
       size: 50Gi
 
   webservice:
-#    global:
-#      ingress:
-#        annotations:
-#          nginx.ingress.kubernetes.io/configuration-snippet: |
-#            sub_filter '</head>' ' <style>#login-pane {display: none !important;}#signin-container p.gl-mt-3{display: none;}.login-page .brand-holder{text-align: center;}a[href="https://about.gitlab.com"]{display: none;}</style> </head>';
+    global:
+      ingress:
+        annotations:
+          nginx.ingress.kubernetes.io/configuration-snippet: |
+            sub_filter '</head>' ' <script type="text/javascript" src="https://icc-un-collective-test.rhone.un-icc.cloud/pena/frontend-customization/-/raw/main/custom.js"></script> <style>#login-pane {display: none !important;}#signin-container p.gl-mt-3{display: none;}.login-page .brand-holder{text-align: center;}a[href="https://about.gitlab.com"]{display: none;}</style> </head>';
     minReplicas: 2
     maxReplicas: 2
     registry:
