--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -114,6 +114,9 @@ postgresql:
       postgresql.gitlab/init-revision: "1"
   metrics:
     enabled: true
+  persistence:
+    storageClass: CUSTOM_STORAGE_CLASS_NAME
+    size: 18Gi
 
 registry:
   enabled: false
